# tea-timer

./: .gitignore  README.md  index.html  package-lock.json  package.json
.github/workflows/: build.yml
docs/plans/: 2026-02-13-tea-timer-design.md
scripts/: generate-icon.mjs
src/: App.css  App.tsx  appMenu.ts  index.css  notify.ts  presets.ts  store.ts  types.ts  window.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: AlertWindow.tsx  MiniTimer.css  MiniTimer.tsx  PresetEditor.css  PresetEditor.tsx  Settings.css  Settings.tsx  SettingsWindow.tsx  Timer.css  Timer.tsx
src/hooks/: useTimer.ts
src/i18n/: en.json  index.ts  ja.json
